changed footer to use vue component named PluginNameFooter.vue for icon support

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,3 +9,11 @@ svg {
 .lm_dropTargetIndicator {
   z-index: 10006 !important;
 }
+
+.lm_dragging {
+  z-index: 10005 !important;
+}
+
+.lm_popout {
+  display: none;
+}
