--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,15 +1,5 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #ececec;
-  --vt-c-white-softer: #f5f5f5;
-  --vt-c-white-mute: #ffffff;
-
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-softer: #303030;
-  --vt-c-black-mute: #3d3d3d;
-
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
@@ -25,10 +15,9 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-softer: var(--vt-c-white-softer);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background: #ffffff;
+  --color-background-soft: #ececec;
+  --color-background-mute: #d1d1d1;
 
   --color-border: var(--vt-c-divider-light-2);
   --color-border-hover: var(--vt-c-divider-light-1);
@@ -41,10 +30,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-softer: var(--vt-c-black-softer);
-    --color-background-mute: var(--vt-c-black-mute);
+    --color-background: #181818;
+    --color-background-soft: #1f1f1f;
+    --color-background-mute: #3b3b3b;
 
     --color-border: var(--vt-c-divider-dark-2);
     --color-border-hover: var(--vt-c-divider-dark-1);
