call /ects/ects_status service on startup; load appropriate plugins; DEV && no ects => mock load all plugins and fill with random data for testing

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -11,6 +11,8 @@
   --vt-c-text-dark-2: rgb(221, 221, 221);
 
   --color-important: red;
+  --color-success: green;
+  --color-warning: orange;
 }
 
 /* semantic color variables for this project */
